<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="zero">0</string>
    <string name="equls">=</string>
    <string name="clr">C</string>
    <string name="hist">Advance with History</string>
    <string name="standard_no_history">Standard - No History</string>
    <string name="advance_with_history">Advance with History</string>


</resources>