<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Salmon"
        app:title="@string/app_name"
        app:titleTextColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textColor="@color/black"
        android:gravity="bottom|end"
        android:textSize="24sp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="60dp">
        <Button
            android:id="@+id/btnone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/one"></Button>
        <Button
            android:id="@+id/btntwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/two"></Button>
        <Button
            android:id="@+id/btthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:backgroundTint="@color/Salmon"
            android:text="@string/three"></Button>
        <Button
            android:id="@+id/btnplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/plus"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/four"></Button>
        <Button
            android:id="@+id/btnfive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/five"></Button>
        <Button
            android:id="@+id/btnsix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/six"></Button>
        <Button
            android:id="@+id/btnsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/sub"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnseven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/seven"></Button>
        <Button
            android:id="@+id/btneight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/eight"></Button>
        <Button
            android:id="@+id/btnnine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/nine"></Button>
        <Button
            android:id="@+id/btnmul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/mul"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/clr"></Button>
        <Button
            android:id="@+id/btnzero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/zero"></Button>
        <Button
            android:id="@+id/btnequals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/equls"></Button>
        <Button
            android:id="@+id/btndiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/div"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnhist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:backgroundTint="@color/DarkBlue"
            android:text="@string/hist"></Button>
       </LinearLayout>

</LinearLayout>